# kompile

./: .gitignore  Dockerfile  Dockerfile.rockylinux8  README.md  build-native-image-debug.sh  build-windows.sh  create-python-test-case.sh  env.txt  generate-command-server-sequence.sh  generate-image-and-sdk.sh  hello_world.py  input1.txt  input2.txt  logs.txt  onnx-2.json  pipeline.json  pom.xml  pom2.xml  pom3.xml  python-step-test.json  python-test-pipeline.json  run-python-test.sh  samediff-sgd.fb  sequence-pipeline-server.json  sequence-pipeline.json  set-env.sh  test-compile.sh  test-keras.sh  test-python-step.sh  test-sequence.sh  test-serve.sh  test-server-generate.sh  test.txt  test_pytorch.py  trace-execution.sh
ADRs/: Optimization Rules - 0001.md  Optimized Pipeline Execution - 0002.md  Python Interface - 0003.md
android/: Dockerfile  build.txt
android-arm64/: Dockerfile
aurora/: Dockerfile
demo/: pipeline
docs/: all.1  all.html  bootstrap.1  bootstrap.html  build-clone-build.1  build-clone-build.html  build-generate-image-and-sdk.1  build-generate-image-and-sdk.html  build-native-image-generate.1  build-pom-generate.1  (+268 more)
kompile-c-library/: CMakeLists.txt  README.md  library.c  rebuild-and-link.sh
kompile-c-library/include/: kompile_c_library.cbp  konduit-serving.h  konduit-serving_dynamic.h  library.h
kompile_pytorch/: README.md  requirements.txt  setup.cfg  test.py
kompile_pytorch/src/kompile/: utils.py
kompile_pytorch/src/kompile/pytorch/: convert.py  trainer.py
kompile_pytorch/src/kompile_pytorch/: __init__.py  convert.py  trainer.py
kompile_pytorch/tests/: convert_tests.py  mnist_tests.py
kompile_tensorflow/: LICENSE  requirements.txt  setup.cfg
kompile_tensorflow/src/kompile/tensorflow/: convert.py  trainer.py
kompile_tensorflow/src/kompile_tensorflow/: trainer.py
(+402 files in other folders)
