[metadata]
name = kompile_pytorch
version = 0.0.1
author = Konduit K.K
description = Utility and Datasets
long_description = Utility and Datasets to facilitate working with Pytorch dataset
url = https://github.com/KonduitAI
keywords = kompile, utils, pytorch, setuptools
[options]
python_requires = >=3.5, <4
package_dir=
    =src
packages=find:

[options.packages.find]
where=src