[metadata]
name = kompile_tensorflow
version = 0.0.1
author = Konduit K.K
description = Utility and Datasets
long_description = Utility and Datasets to facilitate working with Tensorflow datasets
url = https://github.com/KonduitAI
keywords = kompile, utils, tensorflow, setuptools
[options]
python_requires = >=3.5, <4
package_dir=
    =src
packages=find:

[options.packages.find]
where=src